--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>hola mundo</title>
 </head>
 <body>
-    <p>Hola Estudiantes este es mi sitio web, sigueme en Twiter etc etc etc</p>
+    <p>Hola Insectos este es mi sitio web, sigueme en Twiter etc etc etc para hablar de mas basura</p>
 </body>
 </html>
