Cambios inicio curso frontend developer3

--- a/semantic.html
+++ b/semantic.html
@@ -11,13 +11,16 @@
 
     </header>
     <nav>
-
+        <ul>
+            <li>Sobre Nosotros</li>
+            <li>Contactenos</li>
+        </ul>
     </nav>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
 </html>
