Cambios inicio curso frontend developer4

--- a/semantic.html
+++ b/semantic.html
@@ -17,8 +17,19 @@
         </ul>
     </nav>
     <section>
-
+        <div>
+            <img src="https://images.pexels.com/photos/9190648/pexels-photo-9190648.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" width="300" alt="Torre eiffel">
+        </div>
+        <div>
+            <h1>Torre impresionante</h1>
+            <p>Solo esta ubicada en Paris</p>
+        </div>
     </section>
+    <form>
+        <label for="name"></label>
+        <input type="text" id="name"> 
+    </form>
+    <a href="https://platzi.com/home" target="_blank">Ir a Platzi</a>
     <footer>
 
     </footer>
