Cambios inicio curso frontdeveloper6

--- a/selectores-1.html
+++ b/selectores-1.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            background: sandybrown;
+        }
         div{
             background: pink;
+        }
+        .title{
+            color: purple;
+        }
+        #title2{
+            color: red;
+        }
+        a[href="https://platzi.com/"]{
+            color: royalblue;
         }
     </style>
 </head>
 <body>
-    <div>Hola Mundo</div>
+    <div class="title">Hola</div> 
+    <div id="title2">Mundo</div>
+    <a href="https://platzi.com/">Go to Platzi</a>
 </body>
 </html>
