Cambios inicio curso frontdeveloper8

--- a/selectores-2.html
+++ b/selectores-2.html
@@ -9,6 +9,18 @@
         div p{
             color: springgreen;
         }
+        div > div{
+            background: sienna;
+        }
+        .es{
+            color: steelblue;
+        }
+        div + section{
+            background: tomato;
+        }
+        div ~ p{
+            color: yellowgreen;
+        }
     </style>
 </head>
 <body>
@@ -16,6 +28,15 @@
         <p>Platzi</p>
         <p>Es</p>
         <p>Increible</p>
+        <div>Aprendiendo Mucho</div>
+        <div class="es">¿Sera Verdad?</div>
     </div>
+    <p>Sabemos que si es verdad</p>
+    <div>
+        Master
+    </div>
+    <section>
+        Es lo mejor
+    </section>
 </body>
 </html>
