Cambios inicio curso frontdeveloper12

--- a/cascada.html
+++ b/cascada.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        #platzi {
             color: red;
         }
-        h1{
+        .master {
             color: royalblue;
         }
     </style>
 </head>
 <body>
-    <h1>Platzi</h1>
+    <h1 id="patzi" class="master">Platzi</h1>
 </body>
 </html>
