Cambios inicio curso frontdeveloper12

--- a/cascada.html
+++ b/cascada.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <h1 id="patzi" class="master">Platzi</h1>
+    <h1 id="platzi" class="master">Platzi</h1>
 </body>
 </html>
